# jirrabit

./: .dockerignore  .env  Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
accounts/: admin_views.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_apikey_invitetoken.py  0003_user_palette.py  0004_user_muted_kinds_user_notify_email.py  0005_mentionreceipt.py  0006_team_dashboardwidget.py  0007_user_unread_count.py  0008_user_language.py
board/: admin.py  models.py  urls.py  views.py
board/migrations/: 0001_initial.py
core/: aio.py  apps.py  async_views.py  audit.py  context_processors.py  dates.py  hooks.py  hooks_builtin.py  markdown.py  middleware.py  mixins.py  models.py  notifications.py  palettes.py  permissions.py  urls.py  views.py  webhook_registry.py  webhooks.py  worker.py
core/templatetags/: jirrabit_extras.py
issues/: admin.py  apps.py  forms.py  hooks.py  inline.py  models.py  signals.py  urls.py  views.py  workflow_forms.py  workflow_urls.py  workflow_views.py
issues/migrations/: 0001_initial.py  0002_comment_body_html_cache_issue_description_html_cache.py  0002_remove_attachment_file_attachment_content_type_and_more.py  0003_issuetype_description_template_timer_and_more.py  0004_comment_parent.py  0005_issue_archived_commentedit_branchlink_reaction.py  0006_comment_is_internal_status_wip_limit_issuetemplate.py  0007_comment_deleted_at.py
jirrabit/: api.py  asgi.py  settings.py  urls.py  wsgi.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_sprint_retro_notes.py  0003_projectwiki.py  0004_remove_webhook_events_webhook_entity_webhook_event_and_more.py  0005_remove_webhook_secret_remove_webhook_url_and_more.py
realtime/: apps.py  broadcast.py  consumers.py  routing.py
search/: jql.py  urls.py  views.py
static/css/: jirrabit.css
static/js/: board.js  (+5 more)
templates/: 400.html  403.html  404.html  500.html  _avatar.html  _notif_badge.html  base.html
tests/: test_smoke.py
(+119 files in other folders)
