[project]
name = "jirrabit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "daphne>=4.2.1",
    "django>=6.0.5",
    "django-htmx>=1.27.0",
    "whitenoise>=6.12.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.0",
]
