[project]
name = "jirrabit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "daphne>=4.2.1",
    "django>=6.0.5",
    "django-htmx>=1.27.0",
    "whitenoise>=6.12.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.0",
    "django-ninja>=1.3.0",
    "channels>=4.1.0",
    "markdown>=3.6",
    "bleach>=6.1.0",
    "channels-redis>=4.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.ruff]
line-length = 110
target-version = "py314"
extend-exclude = [
    ".venv",
    "migrations",
    "staticfiles",
    "locale",
    "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DJ"]
ignore = [
    "E501",  # long lines handled by formatter
    "B008",  # default args in Django settings
]

[tool.ruff.lint.per-file-ignores]
"jirrabit/settings.py" = ["F401"]
"**/migrations/*.py" = ["E", "F", "W", "I", "UP", "B"]
"tests/*.py" = ["B"]

[tool.ty.src]
include = ["accounts", "board", "core", "issues", "jirrabit", "projects", "realtime", "search"]
exclude = ["**/migrations/**", "**/.venv/**", "staticfiles"]

[tool.ty.rules]
# Django adds many dynamic attributes; ty would complain noisily.
unresolved-attribute = "ignore"
unresolved-reference = "ignore"
